objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Active_Contact__c</fullName>
        <formula>IF(  Contact.Inactive__c = TRUE,FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <formula>Contact.FirstName + &apos; &apos; + Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Portal_Contact__c</fullName>
        <formula>Contact.Community_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Portal Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership_Percent__c</fullName>
        <label>Ownership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>